--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,16 +34,16 @@ jobs:
       uses: actions/checkout@v3
       continue-on-error: true
       with:
-        repository: "mattermost/mattermost-server"
+        repository: "mattermost/mattermost"
         fetch-depth: "20"
-        path: "mattermost-server"
+        path: "mattermost"
         ref: ${{ env.BRANCH_NAME }}
     - uses: actions/checkout@v3
       if: steps.mattermostServer.outcome == 'failure'
       with:
-        repository: "mattermost/mattermost-server"
+        repository: "mattermost/mattermost"
         fetch-depth: "20"
-        path: "mattermost-server"
+        path: "mattermost"
         ref : "b61c096497ac1f22f64b77afe58d0dd5a72b38f1"
     - name: Set up Go
       uses: actions/setup-go@v3
@@ -64,16 +64,16 @@ jobs:
       uses: actions/checkout@v3
       continue-on-error: true
       with:
-        repository: "mattermost/mattermost-server"
+        repository: "mattermost/mattermost"
         fetch-depth: "20"
-        path: "mattermost-server"
+        path: "mattermost"
         ref: ${{ env.BRANCH_NAME }}
     - uses: actions/checkout@v3
       if: steps.mattermostServer.outcome == 'failure'
       with:
-        repository: "mattermost/mattermost-server"
+        repository: "mattermost/mattermost"
         fetch-depth: "20"
-        path: "mattermost-server"
+        path: "mattermost"
         ref : "b61c096497ac1f22f64b77afe58d0dd5a72b38f1"
     - name: npm ci
       run: |
@@ -122,16 +122,16 @@ jobs:
       uses: actions/checkout@v3
       continue-on-error: true
       with:
-        repository: "mattermost/mattermost-server"
+        repository: "mattermost/mattermost"
         fetch-depth: "20"
-        path: "mattermost-server"
+        path: "mattermost"
         ref: ${{ env.BRANCH_NAME }}
     - uses: actions/checkout@v3
       if: steps.mattermostServer.outcome == 'failure'
       with:
-        repository: "mattermost/mattermost-server"
+        repository: "mattermost/mattermost"
         fetch-depth: "20"
-        path: "mattermost-server"
+        path: "mattermost"
         ref : "b61c096497ac1f22f64b77afe58d0dd5a72b38f1"
 
     - name: Set up Go
@@ -159,16 +159,16 @@ jobs:
       uses: actions/checkout@v3
       continue-on-error: true
       with:
-        repository: "mattermost/mattermost-server"
+        repository: "mattermost/mattermost"
         fetch-depth: "20"
-        path: "mattermost-server"
+        path: "mattermost"
         ref: ${{ env.BRANCH_NAME }}
     - uses: actions/checkout@v3
       if: steps.mattermostServer.outcome == 'failure'
       with:
-        repository: "mattermost/mattermost-server"
+        repository: "mattermost/mattermost"
         fetch-depth: "20"
-        path: "mattermost-server"
+        path: "mattermost"
         ref : "b61c096497ac1f22f64b77afe58d0dd5a72b38f1"
 
     - name: Set up Go
