--- a/.github/workflows/dev-release.yml
+++ b/.github/workflows/dev-release.yml
@@ -23,16 +23,16 @@ jobs:
       uses: actions/checkout@v3
       continue-on-error: true
       with:
-        repository: "mattermost/mattermost-server"
+        repository: "mattermost/mattermost"
         fetch-depth: "20"
-        path: "mattermost-server"
+        path: "mattermost"
         ref: ${{ env.BRANCH_NAME }}
     - uses: actions/checkout@v3
       if: steps.mattermostServer.outcome == 'failure'
       with:
-        repository: "mattermost/mattermost-server"
+        repository: "mattermost/mattermost"
         fetch-depth: "20"
-        path: "mattermost-server"
+        path: "mattermost"
         ref : "b61c096497ac1f22f64b77afe58d0dd5a72b38f1"
 
     - name: Replace token 1 server
@@ -99,16 +99,16 @@ jobs:
       uses: actions/checkout@v3
       continue-on-error: true
       with:
-        repository: "mattermost/mattermost-server"
+        repository: "mattermost/mattermost"
         fetch-depth: "20"
-        path: "mattermost-server"
+        path: "mattermost"
         ref: ${{ env.BRANCH_NAME }}
     - uses: actions/checkout@v3
       if: steps.mattermostServer.outcome == 'failure'
       with:
-        repository: "mattermost/mattermost-server"
+        repository: "mattermost/mattermost"
         fetch-depth: "20"
-        path: "mattermost-server"
+        path: "mattermost"
         ref : "b61c096497ac1f22f64b77afe58d0dd5a72b38f1"
     - name: Replace token 1 server
       run: sed -i -e "s,placeholder_rudder_dataplane_url,${{ secrets.RUDDER_DATAPLANE_URL }},g" ${{ github.workspace }}/focalboard/server/services/telemetry/telemetry.go
@@ -157,16 +157,16 @@ jobs:
       uses: actions/checkout@v3
       continue-on-error: true
       with:
-        repository: "mattermost/mattermost-server"
+        repository: "mattermost/mattermost"
         fetch-depth: "20"
-        path: "mattermost-server"
+        path: "mattermost"
         ref: ${{ env.BRANCH_NAME }}
     - uses: actions/checkout@v3
       if: steps.mattermostServer.outcome == 'failure'
       with:
-        repository: "mattermost/mattermost-server"
+        repository: "mattermost/mattermost"
         fetch-depth: "20"
-        path: "mattermost-server"
+        path: "mattermost"
         ref : "b61c096497ac1f22f64b77afe58d0dd5a72b38f1"
     - name: Replace token 1 server
       run: sed -i -e "s,placeholder_rudder_dataplane_url,${{ secrets.RUDDER_DATAPLANE_URL }},g" ${{ github.workspace }}/focalboard/server/services/telemetry/telemetry.go
@@ -227,16 +227,16 @@ jobs:
       uses: actions/checkout@v3
       continue-on-error: true
       with:
-        repository: "mattermost/mattermost-server"
+        repository: "mattermost/mattermost"
         fetch-depth: "20"
-        path: "mattermost-server"
+        path: "mattermost"
         ref: ${{ env.BRANCH_NAME }}
     - uses: actions/checkout@v3
       if: steps.mattermostServer.outcome == 'failure'
       with:
-        repository: "mattermost/mattermost-server"
+        repository: "mattermost/mattermost"
         fetch-depth: "20"
-        path: "mattermost-server"
+        path: "mattermost"
         ref : "b61c096497ac1f22f64b77afe58d0dd5a72b38f1"
 
     - name: Replace token 1 server
