--- a/.github/workflows/lint-server.yml
+++ b/.github/workflows/lint-server.yml
@@ -38,16 +38,16 @@ jobs:
         uses: actions/checkout@v3
         continue-on-error: true
         with:
-          repository: "mattermost/mattermost-server"
+          repository: "mattermost/mattermost"
           fetch-depth: "20"
-          path: "mattermost-server"
+          path: "mattermost"
           ref: ${{ env.BRANCH_NAME }}
       - uses: actions/checkout@v3
         if: steps.mattermostServer.outcome == 'failure'
         with:
-          repository: "mattermost/mattermost-server"
+          repository: "mattermost/mattermost"
           fetch-depth: "20"
-          path: "mattermost-server"
+          path: "mattermost"
           ref : "b61c096497ac1f22f64b77afe58d0dd5a72b38f1"
       - name: set up golangci-lint
         run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.50.1
