SanitizeProfile at the application level

--- a/mattermost-plugin/Makefile
+++ b/mattermost-plugin/Makefile
@@ -144,7 +144,7 @@ ifneq ($(HAS_WEBAPP),)
 	mkdir -p dist/$(PLUGIN_ID)/webapp
 	cp -r webapp/dist dist/$(PLUGIN_ID)/webapp/
 endif
-	cd dist && tar -cvzf $(BUNDLE_NAME) $(PLUGIN_ID)
+	cd dist/$(PLUGIN_ID) && tar -cvzf ../$(BUNDLE_NAME) *
 
 	@echo plugin built at: dist/$(BUNDLE_NAME)
 
