--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         path: "focalboard"
+        ref: ${{ github.head_ref }}
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
@@ -45,6 +46,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         path: "focalboard"
+        ref: ${{ github.head_ref }}s
     - name: npm ci
       run: |
         cd focalboard/webapp && npm ci && cd -
@@ -88,6 +90,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         path: "focalboard"
+        ref: ${{ github.head_ref }}
 
     - name: Set up Go
       uses: actions/setup-go@v3
@@ -110,6 +113,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         path: "focalboard"
+        ref: ${{ github.head_ref }}
 
     - name: Set up Go
       uses: actions/setup-go@v3
