--- a/webapp/package.json
+++ b/webapp/package.json
@@ -32,7 +32,7 @@
 		"@fullcalendar/daygrid": "^5.10.1",
 		"@fullcalendar/interaction": "^5.10.1",
 		"@fullcalendar/react": "^5.10.1",
-		"@mattermost/compass-icons": "^0.1.28",
+		"@mattermost/compass-icons": "^0.1.39",
 		"@reduxjs/toolkit": "^1.8.0",
 		"@tippyjs/react": "4.2.6",
 		"color": "^4.2.1",
@@ -47,22 +47,22 @@
 		"imagemin-svgo": "^10.0.1",
 		"imagemin-webp": "^7.0.0",
 		"lodash": "^4.17.21",
-		"marked": "^4.0.12",
+		"marked": "github:mattermost/marked#2ef7f28cc7718e3f551c4ce9ea75fdd7580c2008",
 		"mini-create-react-context": "^0.4.1",
 		"moment": "^2.29.1",
 		"nanoevents": "^5.1.13",
-		"react": "^16.13.0",
+		"react": "17.0.2",
 		"react-beautiful-dnd": "^13.1.1",
 		"react-day-picker": "^7.4.10",
 		"react-dnd": "^14.0.2",
 		"react-dnd-html5-backend": "^14.0.0",
 		"react-dnd-scrolling": "^1.2.1",
 		"react-dnd-touch-backend": "^14.0.0",
-		"react-dom": "^16.13.0",
+		"react-dom": "17.0.2",
 		"react-hot-keys": "^2.7.1",
 		"react-hotkeys-hook": "^3.4.4",
-		"react-intl": "^5.20.0",
-		"react-redux": "^7.2.0",
+		"react-intl": "*",
+		"react-redux": "7.2.4",
 		"react-router-dom": "^5.2.0",
 		"react-select": "^5.2.2",
 		"trim-newlines": "^4.0.2"
