--- a/webapp/package.json
+++ b/webapp/package.json
@@ -61,7 +61,7 @@
 		"react-dom": "17.0.2",
 		"react-hot-keys": "^2.7.1",
 		"react-hotkeys-hook": "^3.4.4",
-		"react-intl": "*",
+		"react-intl": "^5.20.0",
 		"react-redux": "7.2.4",
 		"react-router-dom": "^5.2.0",
 		"react-select": "^5.2.2",
