--- a/webapp/package.json
+++ b/webapp/package.json
@@ -137,8 +137,8 @@
 		"html-webpack-plugin": "^5.5.0",
 		"image-webpack-loader": "^8.1.0",
 		"isomorphic-fetch": "^3.0.0",
-		"jest": "^27.5.1",
-		"jest-mock": "^27.5.1",
+		"jest": "27.5.1",
+		"jest-mock": "27.5.1",
 		"prettier": "^2.6.1",
 		"redux-mock-store": "^1.5.4",
 		"sass": "^1.49.9",
