--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,9 +46,7 @@ jobs:
       with:
         path: "focalboard"
     - name: npm ci
-      run: |
-        cd focalboard/webapp && npm ci && cd -
-        cd focalboard/mattermost-plugin/webapp && npm ci
+      run: cd focalboard/webapp && npm ci && cd -
 
     - name: Set up Go
       uses: actions/setup-go@v3
@@ -98,7 +96,7 @@ jobs:
       run: cd focalboard; make server-test-mini-${{matrix['db']}}
 
   ci-mac-server:
-    runs-on: macos-11
+    runs-on: macos-12
 
     strategy:
       matrix:
