--- a/docker-testing/docker-compose-mysql.yml
+++ b/docker-testing/docker-compose-mysql.yml
@@ -17,7 +17,7 @@ services:
       - 44446:3306
 
   start_dependencies:
-    image: mattermost/mattermost-wait-for-dep:latest
+    image: mattermost/mattermost-wait-for-dep
     depends_on:
       - mysql
     command: mysql
