--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,15 +28,16 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-      with:
-        path: "focalboard"
+      
+    - run: cat ./docker-testing/docker-compose-mysql.yml
+
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version: 1.21
+        go-version-file: server/go.mod
 
     - name: "Test server: ${{matrix['db']}}"
-      run: cd focalboard; make server-test-${{matrix['db']}}
+      run: make server-test-${{matrix['db']}}
 
   ci-ubuntu-webapp:
     runs-on: ubuntu-20.04
