ci: Minor ci tweaks and upgrades

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ env:
 jobs:
 
   ci-ubuntu-server:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     strategy:
       matrix:
@@ -29,8 +29,6 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - run: cat ./docker-testing/docker-compose-mysql.yml
-
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
@@ -40,10 +38,10 @@ jobs:
       run: make server-test-${{matrix['db']}}
 
   ci-ubuntu-webapp:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         path: "focalboard"
         
@@ -51,14 +49,14 @@ jobs:
       run: cd focalboard/webapp && npm ci && cd -
 
     - name: Set up Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v5
       with:
-        go-version: 1.21
+        go-version-file: focalboard/server/go.mod
 
     - name: Setup Node
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
-        node-version: 20.11.0
+        node-version-file: focalboard/webapp/.nvmrc
 
     - name: Build Linux server
       run: cd focalboard; make server-linux-package
@@ -85,14 +83,14 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         path: "focalboard"
 
     - name: Set up Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v5
       with:
-        go-version: 1.21
+        go-version-file: focalboard/server/go.mod
 
     - name: "Test server (minimum): ${{matrix['db']}}"
       run: cd focalboard; make server-test-mini-${{matrix['db']}}
@@ -107,14 +105,14 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         path: "focalboard"
 
     - name: Set up Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v5
       with:
-        go-version: 1.21
+        go-version-file: focalboard/server/go.mod
 
     - name: "Test server (minimum): ${{matrix['db']}}"
       run: cd focalboard; make server-test-mini-${{matrix['db']}}
